src/test/testData/inspections/constructorExprs.elambda
data Known() = KnownCtr();
unknownCtr = <error descr="Constructor 'UnknownCtr' undefined">UnknownCtr</error>();
knownCtr = KnownCtr();
